<resources>
    <string name="app_name">Navs Academy</string>
    <string name="top_title">Welcome to Navs Academy</string>
    <string name="title">Registration Form</string>
    <string name="txt_fname">First Name</string>
    <string name="txt_lname">Last Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_submit">Submit</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_password_recover">Password Recover</string>
    <string name="action_settings">Setting</string>
    <string name="action_imp">Important</string>
    <string name="pm_phone">Recover By Phone No.:</string>
    <string name="pm_email">Recover By Email Id :</string>
    <string name="pm_dialog_title">Password</string>
    <string name="pm_dialog_pbtn_text">Done</string>
    <string name="pm_dialog_nbtn_text">Cancel</string>
    <string name="dismiss_text">Dismiss</string>
    <string name="pm_dialog_msg">WOW you have recovered ur password as its this : </string>
    <!-- Strings related to cm_choose_que -->
    <string name="cm_choose_que_add">Add</string>
    <string name="cm_choose_que_edit">Edit</string>
    <string name="cm_choose_que_delete">Delete</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_in">Sign In</string>
</resources>
