<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Signup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/top_title"
        android:id="@+id/top_heading"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/heading_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_below="@+id/top_heading"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/heading_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_fname"
        android:id="@+id/tv_fname"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/margin_tv"
        android:textSize="@dimen/basic_text_size" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:inputType="textPersonName"
        android:id="@+id/et_fname"
        android:layout_alignBottom="@id/tv_fname"
        android:layout_toRightOf="@+id/tv_fname"
        android:layout_toEndOf="@+id/tv_fname"
        android:textSize="@dimen/basic_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_lname"
        android:id="@+id/tv_lname"
        android:layout_below="@+id/tv_fname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/margin_tv"
        android:textSize="@dimen/basic_text_size" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:inputType="textPersonName"
        android:id="@+id/et_lname"
        android:layout_alignBottom="@id/tv_lname"
        android:layout_toRightOf="@+id/tv_fname"
        android:layout_toEndOf="@+id/tv_fname"
        android:textSize="@dimen/basic_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_email"
        android:id="@+id/tv_email"
        android:layout_below="@+id/tv_lname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/margin_tv"
        android:textSize="@dimen/basic_text_size" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/et_email"
        android:layout_alignBottom="@id/tv_email"
        android:layout_toRightOf="@+id/tv_fname"
        android:layout_toEndOf="@+id/tv_fname"
        android:textSize="@dimen/basic_text_size" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_submit"
        android:id="@+id/btn_submit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>



</RelativeLayout>
